--- a/demo-wx/src/main/resources/filters/filter-dev.properties
+++ b/demo-wx/src/main/resources/filters/filter-dev.properties
@@ -15,11 +15,10 @@ redis.password=honDa_test
 #\u65e5\u5fd7\u7ea7\u522b
 logging.level=info
 #\u670d\u52a1\u53f7
-#wx.user=yunyingzhe@ttsales.com.cn
-wx.user=10087@hongyan.com.cn
+wx.user=yunyingzhe@ttsales.com.cn
 wx.password=YYzhe12345
-wx.appId=wx203cc78ceb539356
-wx.appSecret=709ff6b366ef3b368bafa8ae1b770b4c
+wx.appId=wx2a9c66286f0c9a4f
+wx.appSecret=0bcc7fa5c45600e0d9fed505a4fd0b59
 wx.token=zhaoxiaobin
 wx.encodingAesKey=0bKtUbH3zYxYhiJapAQfYygyeir5YlrwrORfdzgtSSx
 wx.storeMangerGroupId=101
