--- a/demo-wx/pom.xml
+++ b/demo-wx/pom.xml
@@ -11,7 +11,7 @@
 	<name>demo-wx</name>
 	<description></description>
 
-	<parent>
+	 <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.4.0.RELEASE</version>
@@ -208,6 +208,11 @@
             <version>2.6</version>
         </dependency>
 
+        <dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-configuration-processor</artifactId>
+        	<optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
@@ -265,7 +270,7 @@
                     <skipTests>true</skipTests>
                 </configuration>
             </plugin>
-			<plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>3.0.1</version>
